Update Footer: fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ h5 {
 }
 
 h6 {
-  @apply text-xl leading-[1.875rem] font-medium;
+  @apply text-sm lg:text-xl lg:leading-[1.875rem] font-medium;
 }
 
 .subtitle-1 {
@@ -103,7 +103,7 @@ h6 {
   @apply text-xl leading-6;
 }
 
-button {
+button, a {
   @apply hover:opacity-40 transition ease-in-out duration-300; 
 }
 
@@ -146,4 +146,8 @@ nav li {
           drop-shadow(0 2.77px 2.21px rgba(0,0,0,0.0197))
     ;
   @apply font-medium text-sm lg:text-base;
+}
+
+.flex.gap-\[1\.125rem\] > a > img {
+  @apply w-6 lg:w-auto;
 }
